...
    <string name="distance">distance</string>
    <string name="graphText">Tap on blue bar: display stats for active sessions of the day.\n\n\t\tTap on red bar: display stats from the rest of the day.</string>
    <string name="launchWeeklyStatsFailure">launchWeeklyStats fail:</string>
    <string name="launchWeeklyStatsSuccess">launchWeeklyStats success</string>
    <string name="launchMonthlyStatsFailure">launchMonthlyStats fail:</string>
    <string name="launchMonthlyStatsSuccess">launchMonthlyStats success</string>
    <string name="PersonalBest">PersonalBest</string>
    <string name="authentication_label">Authentication with Firebase</string>
    <string name="create_room_label">Create room</string>
    <string name="existing_room_label">Enter existing</string>
    <string name="room_dialog_heading">Enter room name</string>
    <string name="dialog_room_info">Name of the room is your token by which you can connect with the person who entered the same room name as your</string>
    <string name="text_submit">Submit</string>
...
